# mechmission

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: components.cpp  components.hpp  curses.cpp  curses.hpp  game_action.cpp  game_action.hpp  game_state.cpp  game_state.hpp  grid.cpp  grid.hpp  main.cpp  mech.hpp  movement_system.cpp  movement_system.hpp  pathing.cpp  pathing.hpp  point.cpp  point.hpp  turn_system.cpp  turn_system.hpp
src/components/: control.hpp  mech.cpp  mech.hpp  point.cpp  point.hpp
src/curses/: battlefield_help_window.cpp  battlefield_help_window.hpp  battlefield_help_window_group.cpp  battlefield_help_window_group.hpp  battlefield_window.cpp  battlefield_window.hpp  battlefield_window_group.cpp  battlefield_window_group.hpp  color.cpp  color.hpp  confirmation_window_group.cpp  confirmation_window_group.hpp  input.cpp  input.hpp  mouse_position.hpp  screen.cpp  screen.hpp  window.cpp  window.hpp  window_group.hpp
test/: Dockerfile
